<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".StartActivity"
    >

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.10" />


    <TextView
        android:id="@+id/textView_label_numOfPlayers"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:fontFamily="@font/open_sans"

        android:text="@string/label_numOfPlayers"
        android:textColor="@color/black"
        android:textColorHighlight="@color/black"
        android:textColorLink="@color/black"
        android:textSize="30sp"

        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/textView_numOfPlayers"
        app:layout_constraintEnd_toEndOf="@+id/button_plus"
        app:layout_constraintStart_toStartOf="@+id/button_minus" />


    <Button
        android:id="@+id/button_minus"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/button_plus_minus"

        android:padding="0dp"
        android:text="@string/minus"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:fontFamily="@font/open_sans"

        app:layout_constraintBottom_toBottomOf="@+id/textView_numOfPlayers"
        app:layout_constraintEnd_toStartOf="@+id/textView_numOfPlayers"
        app:layout_constraintStart_toStartOf="@id/guideline_10"
        app:layout_constraintTop_toTopOf="@+id/textView_numOfPlayers"
        />


    <TextView
        android:id="@+id/textView_numOfPlayers"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/button_plus_minus"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:fontFamily="@font/open_sans"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_plus"
        app:layout_constraintStart_toEndOf="@+id/button_minus"
        app:layout_constraintTop_toTopOf="parent"
        />


    <Button
        android:id="@+id/button_plus"
        android:layout_width="50dp"
        android:layout_height="50dp"

        android:background="@drawable/button_plus_minus"
        android:padding="0dp"
        android:text="@string/plus"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:fontFamily="@font/open_sans"

        app:layout_constraintBottom_toBottomOf="@+id/textView_numOfPlayers"
        app:layout_constraintEnd_toStartOf="@+id/guideline_90"
        app:layout_constraintStart_toEndOf="@+id/textView_numOfPlayers"
        app:layout_constraintTop_toTopOf="@+id/textView_numOfPlayers"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_90"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.90" />

    <ImageView
        android:id="@+id/imageView_logo"
        app:srcCompat="@drawable/logo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerInside"

        app:layout_constraintBottom_toTopOf="@+id/textView_label_numOfPlayers"
        app:layout_constraintEnd_toEndOf="@+id/textView_label_numOfPlayers"
        app:layout_constraintStart_toStartOf="@+id/textView_label_numOfPlayers"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/button_start"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_plus_minus"

        android:layout_marginTop="30dp"
        android:text="@string/start"
        android:textColor="@color/black"
        android:textColorLink="@color/black"
        android:textSize="30sp"
        android:fontFamily="@font/open_sans"

        app:layout_constraintEnd_toEndOf="@+id/button_plus"
        app:layout_constraintStart_toStartOf="@+id/button_minus"
        app:layout_constraintTop_toBottomOf="@+id/textView_numOfPlayers"/>

    <Button
        android:id="@+id/button_rules"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_plus_minus"

        android:layout_marginTop="30dp"
        android:text="@string/rules"
        android:textColor="@color/black"
        android:textColorLink="@color/black"
        android:textSize="30sp"
        android:fontFamily="@font/open_sans"

        app:layout_constraintEnd_toEndOf="@+id/button_start"
        app:layout_constraintStart_toStartOf="@+id/button_start"
        app:layout_constraintTop_toBottomOf="@+id/button_start"/>

</androidx.constraintlayout.widget.ConstraintLayout>